lintian (2.5.39) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/files.desc:
    + [JW] Fix typo.

  * checks/scripts.desc:
    + [JW] Fix typo.

  * data/spelling/corrections:
    + [JW] Add more corrections.

  * doc/examples/profiles/my-vendor/main.profile:
    + [JW] Fix typo.

  * doc/lintian.xml:
    + [JW] Fix typo.

  * lib/Lintian/Tags.pm:
    + [JW] Fix typo.

 -- Niels Thykier <niels@thykier.net>  Mon, 16 Nov 2015 20:57:35 +0100

lintian (2.5.38.1) unstable; urgency=medium

  No tags were added or removed

  * checks/binaries.{desc,pm}:
    + [NT] Check for ".debug_str" section in addition to the
      ".debug_line" section to determine if an ELF file contains
      detached debug symbols.
  * checks/cruft.pm:
    + [BR] Avoid false positive in minified javascript by
      detecting line with only one colon.
      (Closes: #792365).
  * checks/debconf.desc:
    + [JW] Fix typo.
  * checks/files.pm:
    + [BR] Whitelist pbuilder for dir-or-file-in-build-tree.
  * checks/scripts.pm:
    + [NT] Check the syntax of maintainter scripts with "sh" when
      the script is declared with "#!/bin/sh".  Thanks to Ron Lee
      for spotting this.
  * checks/shared-libs.pm:
    + [ADB, NT] Fix false-positive instance of the tag
      postrm-should-call-ldconfig when the package is using the
      ldconfig trigger.  (Closes: #804256)
  * checks/source-copyright.desc:
    + [JW] Use HTTPS for www.debian.org URLs.

  * commands/spellintian.pm:
    + [JW,NT] Report non-files as "not a file" rather than
      claiming them to be directories.  (Closes: #802475)

  * data/cruft/non-free-files:
    + [JW] Use HTTPS for bugs.debian.org URLs.
  * data/output/manual-references:
    + [JW] Refresh.
  * data/spelling/corrections*:
    + [JW] Add more corrections.

  * doc/lintian.xml:
    + [JW] Use HTTPS for www.debian.org and lintian.debian.org URLs.
  * doc/README.developers:
    + [JW] Use HTTPS for wiki.debian.org URLs.
  * doc/README.release: